// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballFixturesTournament should render full width correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa cWUgCn"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-ifAKCX fUGfdR"
    />
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render national competitions correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kzAIuV"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-ifAKCX fUGfdR"
    />
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render national competitions correctly with single column 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kzAIuV"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-ifAKCX iwaKRi"
    />
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render other competitions correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kzAIuV"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-ifAKCX fUGfdR"
    />
  </div>
</DocumentFragment>
`;
